--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mapbox/unitbezier": "^0.0.0",
     "@mapbox/vector-tile": "^1.3.1",
     "@mapbox/whoots-js": "^3.1.0",
+    "base64-js": "^1.3.0",
     "csscolorparser": "~1.0.2",
     "earcut": "^2.1.3",
     "esm": "^3.0.84",
@@ -30,6 +31,7 @@
     "grid-index": "^1.0.0",
     "minimist": "0.0.8",
     "murmurhash-js": "^1.0.0",
+    "pako": "^1.0.7",
     "pbf": "^3.0.5",
     "potpack": "^1.0.1",
     "quickselect": "^1.0.0",
